# verilator_cmake_example

./: .clangd  CMakeLists.txt  build.sh  flake.nix
rtl/: mux2.v
sim/: mux2.cpp
